@@ -1,3 +1,13 @@
+2011-07-05  Dirk Pranke  <dpranke@chromium.org>
+
+        Re-land nrwt: make sharding tests needing locks less hard-coded
+        https://bugs.webkit.org/show_bug.cgi?id=63112
+
+        Reviewed by Ojan Vafai.
+
+        * Scripts/webkitpy/layout_tests/layout_package/manager.py:
+        * Scripts/webkitpy/layout_tests/layout_package/manager_unittest.py:
+
 2011-07-05  Adam Barth  <abarth@webkit.org>
 
         TestResultServer should support callback parameter for JSON
